[gd_scene load_steps=4 format=3 uid="uid://btaoebiqoslts"]

[ext_resource type="Script" path="res://Scenes/logica_tuberia.gd" id="1_2u03r"]
[ext_resource type="Texture2D" uid="uid://c8785yu05p0wu" path="res://Assets/Sprites/tuberias.png" id="2_pf7mo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dymld"]
size = Vector2(2, 2)

[node name="Tubo" type="Area2D" groups=["tuberia"]]
position = Vector2(928, 127)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_2u03r")

[node name="tubo abajo" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 16)
texture = ExtResource("2_pf7mo")
hframes = 2

[node name="tubo arriba" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
texture = ExtResource("2_pf7mo")
flip_v = true
hframes = 2

[node name="tubo izquierda" type="Sprite2D" parent="."]
visible = false
position = Vector2(-16, 0)
texture = ExtResource("2_pf7mo")
flip_h = true
hframes = 2
frame = 1

[node name="tubo derecha" type="Sprite2D" parent="."]
visible = false
position = Vector2(16, 0)
texture = ExtResource("2_pf7mo")
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dymld")

[node name="TP_mario_p_arriba" type="Marker2D" parent="."]
position = Vector2(0, -8)

[node name="TP_mario_g_arriba" type="Marker2D" parent="."]
position = Vector2(0, -16)

[node name="TP_mario_p_abajo" type="Marker2D" parent="."]
position = Vector2(0, 8)

[node name="TP_mario_g_abajo" type="Marker2D" parent="."]
position = Vector2(0, 16)

[node name="TP_mario_izquierda" type="Marker2D" parent="."]
position = Vector2(-7, 0)

[node name="TP_mario_derecha" type="Marker2D" parent="."]
position = Vector2(7, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
